@@ -1,8 +1,8 @@
-An example forwarding module 
+An example driver 
 
 ## Brief:
 
-This is a white canvas for writing the port to your own platform in xDPD. The forwarding module does nothing but print traces.
+This is a white canvas for writing the port to your own platform in xDPD. The driver does nothing but print traces.
 You may want to have a look to ROFL-pipeline library in order to build the internals of the library.
 
 ## Comments:
@@ -11,7 +11,7 @@ Put any other comment here that might be of interest
 
 ## Folder structure and some files:
 	
-	- afa-imp: Abstract Forwarding API implementation (forwarding module end) 
+	- hal-imp: Hardware Abstraction Layer API routines 
 	- .... 
 	
 ## Authorship:
