@@ -34,7 +34,7 @@ typedef uint32_t storeid;
 /**
 * @brief Temporal storage for datapackets (PKT_IN events). 
 *
-* @ingroup fm_gnu_linux_io
+* @ingroup driver_gnu_linux_io
 */
 class datapacket_storage
 {
