@@ -57,7 +57,7 @@ typedef struct epoll_event_data{
 * @brief I/O scheduler base class which defines the way
 * way I/O threads go through the ports for TX and RX.
 *
-* @ingroup fm_gnu_linux_io_schedulers
+* @ingroup driver_gnu_linux_io_schedulers
 * 
 * @description Implements a simple I/O scheduler based on async epoll
 * events.
