@@ -24,7 +24,7 @@ namespace gnu_linux {
 * @brief I/O scheduler base class which defines the way
 * way I/O threads go through the ports for TX and RX.
 *
-* @ingroup fm_gnu_linux_io_schedulers
+* @ingroup driver_gnu_linux_io_schedulers
 */
 class ioscheduler{ 
 
