@@ -33,7 +33,7 @@ namespace xdpd{
 * @ingroup cmm_of 
 *
 * @description This includes the OF endpoint and the binding with the
-* forwarding plane (through AFA)
+* forwarding plane (through HAL)
 */
 class openflow12_switch : public openflow_switch {
 
